static/css/base.css
html {
  font-size: 14px;
  overflow-y: hidden;
  overflow-x: hidden;
}

::-webkit-scrollbar {
  width: 6px;
  height: 8px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
  border-radius: 6px;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}

.sidebar {
    height: 100vh; /* Set height to 100% of viewport height */
    background-color: #343a40; /* Example sidebar background color */
    color: white; /* Example text color */
}

.board-col {
  height: 100vh;
  overflow: auto;
  min-height: 100vh;
}

.btn-toggle-nav a {
  padding: .1875rem .5rem;
  margin-top: .125rem;
  margin-left: 1.25rem;
}

.btn-toggle-nav a:hover,
.btn-toggle-nav a:focus {
  background-color: var(--bs-tertiary-bg);
}

/* .rounded-pill {
  min-width: 20px;
  min-height: 20px;
  max-width: 20px;
  max-height: 20px;
} */

